--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon ./src/index.js",
-    "start":"nodemon ./src/index.js"
+    "start": "nodemon ./src/index.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -22,6 +22,6 @@
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "razorpay": "^2.9.2",
-    "socket-io": "^1.0.0"
+    "socket.io": "^4.7.5"
   }
 }
