--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,7 @@ SMTP_EMAIL_PASS = generated password
 GOOGLE_CLIENT_ID = "*****"
 GOOGLE_CLIENT_SECRET = "****"
 
+# razorPay credentials
+RAZORPAY_KEY_ID = 
+RAZORPAY_KEY_SECRET = 
+
