--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon ./src/index.js",
-    "start": "nodemon ./src/index.js"
+    "start": "node ./src/index.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
