change dokku app

--- a/.github/workflows/dev-deploy.yaml
+++ b/.github/workflows/dev-deploy.yaml
@@ -24,5 +24,5 @@ jobs:
           ssh-private-key: ${{ secrets.DEV_SSH_PRIVATE_KEY }}
           dokku-host: "35.154.17.159"
           ssh-port: "22"
-          app-name: "biz"
+          app-name: " biz-api"
           git-push-flags: "--force"
