--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node ./src/index.js"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
