--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ NODE_ENV = "local"
 # PRODUCTION_URL = "render.com"
 
 # db 
-MONGODB_CONNECTION_STRING = mongodb://127.0.0.1:27017
+MONGODB_CONNECTION_STRING = mongodb+srv://test:test@cluster0.nzjxao0.mongodb.net/dev?retryWrites=true&w=majority&appName=Cluster0
 
 # smpt credentials
 SMTP_EMAIL_HOST = 'smtp.gmail.com'
