--- a/.github/workflows/prod-deploy.yaml
+++ b/.github/workflows/prod-deploy.yaml
@@ -1,9 +1,9 @@
-name: Dev Deployment
+name: prod Deployment
 
 on:
   push:
     branches:
-      - dev
+      - main
 
 jobs:
   push:
@@ -24,5 +24,5 @@ jobs:
           ssh-private-key: ${{ secrets.DEV_SSH_PRIVATE_KEY }}
           dokku-host: "35.154.17.159"
           ssh-port: "22"
-          app-name: "dev-api"
+          app-name: "biz-api"
           git-push-flags: "--force"
