--- a/.github/workflows/dev-deploy.yaml
+++ b/.github/workflows/dev-deploy.yaml
@@ -29,3 +29,4 @@ jobs:
           ssh-port: "22"
           app-name: "dev-api"
           git-push-flags: "--force"
+          remote-branch: "dev"
