--- a/.github/workflows/dev-deploy.yaml
+++ b/.github/workflows/dev-deploy.yaml
@@ -3,7 +3,7 @@ name: Dev Deployment
 on:
   push:
     branches:
-      - main
+      - dev
 
 jobs:
   push:
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          ref: main
+          ref: dev
           fetch-depth: 0
 
       - id: deploy
