fix: git action dev

--- a/.github/workflows/dev-deploy.yaml
+++ b/.github/workflows/dev-deploy.yaml
@@ -1,5 +1,6 @@
 name: Dev Deployment
 
+
 on:
   push:
     branches:
@@ -17,9 +18,6 @@ jobs:
           ref: dev
           fetch-depth: 0
 
-      - name: Rename Dockerfile.dev to Dockerfile
-        run: mv Dockerfile.dev Dockerfile
-
       - id: deploy
         name: Deploy to dokku
         uses: idoberko2/dokku-deploy-github-action@v1.0.1
@@ -27,6 +25,5 @@ jobs:
           ssh-private-key: ${{ secrets.DEV_SSH_PRIVATE_KEY }}
           dokku-host: "35.154.17.159"
           ssh-port: "22"
-          app-name: "dev-api"
+          app-name: "biz-api"
           git-push-flags: "--force"
-          remote-branch: "dev"
